# axum-insights

./: Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: build.yml
src/: lib.rs
