[package]
name = "axum-insights"
version = "0.5.0"
edition = "2021"
authors = ["Aaron Roney <twitchax@gmail.com>"]
license = "MIT"
description = "An Azure Application Insights exporter for axum via tracing."
readme = "README.md"
homepage = "https://github.com/twitchax/axum-insights"
repository = "https://github.com/twitchax/axum-insights"
keywords = ["axum", "application", "insights", "appinsights", "tracing"]
categories = ["web-programming"]

[features]
default = ["reqwest-client"]
reqwest-client = ["dep:reqwest", "opentelemetry-application-insights/reqwest-client"]

[dependencies]
async-trait = { version = "0.1" }
tracing = { version = "0.1" }
opentelemetry = { version = "0.27" }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-application-insights = { version = "0.37", features = ["metrics", "live-metrics"] }
tracing-opentelemetry = { version = "0.28" }
tracing-subscriber = { version = "0.3" }
futures = { version = "0.3" }
http = { version = "1.2" }
http-body-util = { version = "0.1" }
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1.6", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
serde = { version = "1" }
serde_json = { version = "1" }
tokio = { version = "1", features = ["rt", "macros", "signal", "parking_lot"] }
reqwest = { version = "0.12", features = ["blocking"], optional = true }