[package]
name = "axum-insights"
version = "0.6.1"
edition = "2021"
authors = ["Aaron Roney <twitchax@gmail.com>"]
license = "MIT"
description = "An Azure Application Insights exporter for axum via tracing."
readme = "README.md"
homepage = "https://github.com/twitchax/axum-insights"
repository = "https://github.com/twitchax/axum-insights"
keywords = ["axum", "application", "insights", "appinsights", "tracing"]
categories = ["web-programming"]

[features]
default = ["reqwest-client"]
reqwest-client = ["dep:reqwest", "opentelemetry-application-insights/reqwest-client"]

[dependencies]
async-trait = { version = "0.1" }
tracing = { version = "0.1" }
opentelemetry = { version = "0.27" }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-application-insights = { version = "0.37", features = ["live-metrics"] }
tracing-opentelemetry = { version = "0.28" }
tracing-subscriber = { version = "0.3" }
futures = { version = "0.3", default-features = false, features = ["executor"] }
http = { version = "1.2" }
http-body-util = { version = "0.1" }
axum = { version = "0.8", default-features = false, features = ["json", "matched-path", "macros"] }
hyper = { version = "1.6", default-features = false }
tower = { version = "0.5", default-features = false }
serde = { version = "1" }
serde_json = { version = "1" }
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
